Slightly lower the study overboard in order to prevent it from overflowing.

--- a/public/stylesheets/study.css
+++ b/public/stylesheets/study.css
@@ -366,6 +366,9 @@ div.underboard .notif.error {
   margin: 6px 0 0 0;
   display: inline-block;
 }
+.study_overboard.lichess_overboard {
+  top: 60%;
+}
 .study_overboard .material.form {
   margin: 0;
   padding: 20px;
